--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
                 Get Cocktail
             </button>
 
+            <!-- Search Form -->
+            <form id="searchForm" class="mt-4">
+                <input type="text" id="searchInput" placeholder="Search cocktails..." class="bg-gray-700 text-white border-none py-2 px-4 rounded-l">
+                <button type="submit" class="bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-r">
+                    Search
+                </button>
+            </form>
+
             <!-- Left Decoration Section -->
             <div class="decoration-section-left mt-6">
                 <p class="decoration-text">Enjoy your cocktail journey!</p>
